--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,108 @@
-Django==3.2.7
-djangorestframework==3.12.4
-django-environ==0.7.0
-django-filter==21.1
-django-autoslug==1.9.8
-django-countries==7.2.1
-Pillow==8.3.2
-django-phonenumber-field==5.2.0
-phonenumbers==8.12.33
-psycopg2-binary==2.9.1
-flake8==3.9.2
+aiohttp==3.9.1
+aiosignal==1.3.1
+amqp==2.6.1
+aniso8601==9.0.1
+appdirs==1.4.4
+argh==0.26.2
+asgiref==3.6.0
+async-timeout==4.0.3
+attrs==23.1.0
+backports.zoneinfo==0.2.1
+billiard==3.6.4.0
 black==21.6b0
-isort==5.9.3
-djoser==2.1.0
+celery==4.4.7
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.7
+colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==7.3.2
+cryptography==40.0.2
+defusedxml==0.7.1
+dj-rest-auth==4.0.0
+Django==4.2.1
+django-allauth==0.54.0
+django-appconf==1.0.6
+django-autoslug==1.9.8
+django-celery-email==3.0.0
+django-cors-headers==4.3.1
+django-countries==7.2.1
+django-countries-with-calling-codes==0.1.1
+django-environ==0.11.2
+django-filter==23.2
+django-jazzmin==2.6.0
+django-phonenumber-field==7.2.0
+django-phonenumbers==1.0.1
+django-templated-mail==1.1.1
+django-utils-six==2.0
+djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
-PyJWT==2.1.0
+djoser==2.1.0
+drf-yasg==1.21.7
+exceptiongroup==1.2.0
+factory-boy==3.3.0
+Faker==8.9.1
+flake8==3.9.2
+flower==0.9.7
+frozenlist==1.4.0
+geoip2==4.7.0
+graphene==3.3
+graphene-django==3.1.5
+graphql-core==3.2.3
+graphql-relay==3.2.0
+humanize==4.9.0
+idna==3.4
+inflection==0.5.1
+iniconfig==2.0.0
+isort==5.9.3
+itypes==1.2.0
+Jinja2==3.1.2
+kombu==4.6.11
+MarkupSafe==2.1.3
+maxminddb==2.5.1
+mccabe==0.6.1
+multidict==6.0.4
+mypy-extensions==1.0.0
+oauthlib==3.2.2
+packaging==23.2
+pathspec==0.11.2
+phonenumbers==8.12.33
+Pillow==8.3.2
+pluggy==1.3.0
+prometheus-client==0.8.0
+promise==2.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.1
+pycodestyle==2.7.0
+pycparser==2.21
+pyflakes==2.3.1
+PyJWT==2.7.0
+pytest==7.4.3
+pytest-cov==2.12.1
 pytest-django==4.4.0
 pytest-factoryboy==2.1.0
-Faker==8.9.1
-pytest-cov==2.12.1
+python-dateutil==2.8.2
+python-decouple==3.8
+python3-openid==3.2.0
+pytz==2023.3
+PyYAML==6.0.1
 redis==3.5.3
-celery==4.4.7
-flower==0.9.7
-django-celery-email==3.0.0
-argh==0.26.2
-PyYAML==5.3.1
+regex==2023.10.3
+requests==2.30.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.5.0
+sqlparse==0.4.4
+text-unidecode==1.3
+toml==0.10.2
+tomli==2.0.1
+tornado==6.4
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.0.2
+vine==1.3.0
 watchdog==1.0.2
+yarl==1.9.3
